welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:10: error: illegal start of simple expression
    }else if(){
             ^loneTeen:14: error: ')' expected but '}' found.
} 
^